[gd_scene load_steps=8 format=2]

[ext_resource path="res://survey.tres" type="StyleBox" id=1]
[ext_resource path="res://IDVBox.gd" type="Script" id=2]
[ext_resource path="res://InsuranceVBox.gd" type="Script" id=3]
[ext_resource path="res://TitleInter.tres" type="DynamicFont" id=4]
[ext_resource path="res://progressbar_green.tres" type="StyleBox" id=5]
[ext_resource path="res://progressbar_orange.tres" type="StyleBox" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.196078, 0.192157, 0.211765, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0745098, 0.0666667, 0.0666667, 1 )
border_blend = true

[node name="Home" type="Control"]
anchor_top = 0.00110112
anchor_right = 1.0
anchor_bottom = 1.0011
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterPanel" type="PanelContainer" parent="."]
anchor_right = 0.78125
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MasterVBox" type="VBoxContainer" parent="MasterPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1493.0
margin_bottom = 1073.0

[node name="TitleLabel" type="Label" parent="MasterPanel/MasterVBox"]
margin_top = 41.0
margin_right = 1486.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 4 )
text = "Home page"
align = 1
valign = 1

[node name="Content" type="MarginContainer" parent="MasterPanel/MasterVBox"]
margin_top = 136.0
margin_right = 1486.0
margin_bottom = 1065.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 7.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="ContentVBox" type="VBoxContainer" parent="MasterPanel/MasterVBox/Content"]
margin_left = 15.0
margin_top = 15.0
margin_right = 1471.0
margin_bottom = 914.0
custom_constants/separation = 10

[node name="ProgressBars" type="HBoxContainer" parent="MasterPanel/MasterVBox/Content/ContentVBox"]
margin_right = 1456.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 500 )
size_flags_horizontal = 3
custom_constants/separation = 12

[node name="IDPanel" type="PanelContainer" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars"]
margin_right = 722.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 1 )

[node name="IDVBox" type="VBoxContainer" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars/IDPanel"]
margin_left = 15.0
margin_top = 15.0
margin_right = 707.0
margin_bottom = 485.0
custom_constants/separation = 8
script = ExtResource( 2 )

[node name="IDInfoLabel" type="Label" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars/IDPanel/IDVBox"]
margin_top = 56.0
margin_right = 692.0
margin_bottom = 105.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 4 )
text = "ID card"
align = 1
valign = 1

[node name="StatusHBox" type="HBoxContainer" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars/IDPanel/IDVBox"]
margin_top = 169.0
margin_right = 692.0
margin_bottom = 189.0

[node name="StatusLabel" type="Label" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars/IDPanel/IDVBox/StatusHBox"]
margin_right = 56.0
margin_bottom = 20.0
size_flags_vertical = 6
text = "Status: "

[node name="ValidInvalid" type="Label" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars/IDPanel/IDVBox/StatusHBox"]
margin_left = 60.0
margin_right = 107.0
margin_bottom = 20.0
text = "VALID"

[node name="RenewedLabel" type="Label" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars/IDPanel/IDVBox"]
margin_top = 197.0
margin_right = 692.0
margin_bottom = 217.0
text = "Last Renewed:"

[node name="ValidUntilLabel" type="Label" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars/IDPanel/IDVBox"]
margin_top = 225.0
margin_right = 692.0
margin_bottom = 245.0
text = "Valid until:"

[node name="ValidBarLabel" type="Label" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars/IDPanel/IDVBox"]
margin_top = 253.0
margin_right = 692.0
margin_bottom = 273.0
size_flags_vertical = 0
text = "Valid for:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars/IDPanel/IDVBox"]
margin_top = 281.0
margin_right = 692.0
margin_bottom = 331.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 2
custom_styles/fg = ExtResource( 5 )
step = 1.0
value = 50.0
percent_visible = false

[node name="Days" type="Label" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars/IDPanel/IDVBox/ProgressBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -10.0
margin_right = 20.0
margin_bottom = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Note" type="Label" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars/IDPanel/IDVBox"]
margin_top = 450.0
margin_right = 692.0
margin_bottom = 470.0
text = "You can renew your ID card in your faculty's Dean's office."

[node name="InsurancePanel" type="PanelContainer" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars"]
margin_left = 734.0
margin_right = 1456.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 1 )

[node name="InsuranceVBox" type="VBoxContainer" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars/InsurancePanel"]
margin_left = 15.0
margin_top = 15.0
margin_right = 707.0
margin_bottom = 485.0
custom_constants/separation = 8
script = ExtResource( 3 )

[node name="InsuranceInfoLabel" type="Label" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars/InsurancePanel/InsuranceVBox"]
margin_top = 56.0
margin_right = 692.0
margin_bottom = 105.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 4 )
text = "Insurance"
align = 1
valign = 1

[node name="StatusHBox" type="HBoxContainer" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars/InsurancePanel/InsuranceVBox"]
margin_top = 169.0
margin_right = 692.0
margin_bottom = 189.0

[node name="StatusLabel" type="Label" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars/InsurancePanel/InsuranceVBox/StatusHBox"]
margin_right = 56.0
margin_bottom = 20.0
size_flags_vertical = 6
text = "Status: "

[node name="ValidInvalid" type="Label" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars/InsurancePanel/InsuranceVBox/StatusHBox"]
margin_left = 60.0
margin_right = 129.0
margin_bottom = 20.0
text = "EXPIRED"

[node name="RenewedLabel" type="Label" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars/InsurancePanel/InsuranceVBox"]
margin_top = 197.0
margin_right = 692.0
margin_bottom = 217.0
text = "Last Renewed:"

[node name="ValidUntilLabel" type="Label" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars/InsurancePanel/InsuranceVBox"]
margin_top = 225.0
margin_right = 692.0
margin_bottom = 245.0
text = "Valid until:"

[node name="ValidBarLabel" type="Label" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars/InsurancePanel/InsuranceVBox"]
margin_top = 253.0
margin_right = 692.0
margin_bottom = 273.0
size_flags_vertical = 0
text = "Valid for:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars/InsurancePanel/InsuranceVBox"]
margin_top = 281.0
margin_right = 692.0
margin_bottom = 331.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 2
custom_styles/fg = ExtResource( 6 )
step = 1.0
value = 50.0
percent_visible = false

[node name="Days" type="Label" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars/InsurancePanel/InsuranceVBox/ProgressBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -10.0
margin_right = 20.0
margin_bottom = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Note" type="Label" parent="MasterPanel/MasterVBox/Content/ContentVBox/ProgressBars/InsurancePanel/InsuranceVBox"]
margin_top = 450.0
margin_right = 692.0
margin_bottom = 470.0
text = "Check your university mail for insurance renewal offers."

[node name="AnnouncementsLabel" type="Label" parent="MasterPanel/MasterVBox/Content/ContentVBox"]
margin_top = 509.0
margin_right = 1456.0
margin_bottom = 569.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = ExtResource( 4 )
text = "Announcements:"

[node name="Announcement1" type="PanelContainer" parent="MasterPanel/MasterVBox/Content/ContentVBox"]
margin_top = 580.0
margin_right = 1456.0
margin_bottom = 650.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="MasterPanel/MasterVBox/Content/ContentVBox/Announcement1"]
margin_left = 3.0
margin_top = 3.0
margin_right = 1453.0
margin_bottom = 67.0

[node name="Title" type="Label" parent="MasterPanel/MasterVBox/Content/ContentVBox/Announcement1/HBoxContainer"]
margin_top = 22.0
margin_right = 150.0
margin_bottom = 42.0
rect_min_size = Vector2( 150, 0 )
text = "Dean's Hours"
align = 1
valign = 1

[node name="VSeparator" type="VSeparator" parent="MasterPanel/MasterVBox/Content/ContentVBox/Announcement1/HBoxContainer"]
margin_left = 154.0
margin_right = 158.0
margin_bottom = 64.0
custom_constants/separation = 4

[node name="Content" type="Label" parent="MasterPanel/MasterVBox/Content/ContentVBox/Announcement1/HBoxContainer"]
margin_left = 162.0
margin_top = 22.0
margin_right = 1025.0
margin_bottom = 42.0
text = "In connection with the organization of Łódź IT days, classes from 24.11 to 27.11 in hours 8:00 - 12:00 are canceled. "
align = 1
valign = 1

[node name="Announcement2" type="PanelContainer" parent="MasterPanel/MasterVBox/Content/ContentVBox"]
margin_top = 660.0
margin_right = 1456.0
margin_bottom = 730.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="MasterPanel/MasterVBox/Content/ContentVBox/Announcement2"]
margin_left = 3.0
margin_top = 3.0
margin_right = 1453.0
margin_bottom = 67.0

[node name="Title" type="Label" parent="MasterPanel/MasterVBox/Content/ContentVBox/Announcement2/HBoxContainer"]
margin_top = 22.0
margin_right = 150.0
margin_bottom = 42.0
rect_min_size = Vector2( 150, 0 )
text = "Insurance"
align = 1
valign = 1

[node name="VSeparator" type="VSeparator" parent="MasterPanel/MasterVBox/Content/ContentVBox/Announcement2/HBoxContainer"]
margin_left = 154.0
margin_right = 158.0
margin_bottom = 64.0

[node name="Content" type="Label" parent="MasterPanel/MasterVBox/Content/ContentVBox/Announcement2/HBoxContainer"]
margin_left = 162.0
margin_top = 22.0
margin_right = 654.0
margin_bottom = 42.0
text = "New student insutance offers available! Check your university mail."
align = 1
valign = 1
